fix models and develop recurrence date generation service
